kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: langflow
  annotations:
    alb.ingress.kubernetes.io/inbound-cidrs: "100.8.117.17/32"
  labels:
    app: langflow
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: langflow-service
            port:
              number: 8080
